examples/errors/syntax_missing_paren_close.jc
// ================================================
// ERROR: Missing Closing Parenthesis
// Expected: [SyntaxError] Expected ')' after value
// ================================================

// Missing the closing parenthesis
say("Hello";
